Start working on the ability to create an inventory.